--- a/Index.html
+++ b/Index.html
@@ -209,10 +209,10 @@
                           
                             <label for="tema">Tema:</label>
                             <select>
-                                <option>Large</option>
-                                <option>Medium</option>
-                                <option>Small</option>
-                                <option>Extra Small</option>
+                                <option>Atículos</option>
+                                <option>Recursos</option>
+                                <option>Información general</option>
+                                <option>Todo</option>
                             </select>
                             <div class="button-enviar-form-home">
                                 <a href="#" class="button">Enviar</a>
