cambios en la base

--- a/Index.html
+++ b/Index.html
@@ -14,8 +14,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
 
         <!--archivos CSS-->
-        <link rel="stylesheet" href="css/Style.css"/>
         <link rel="stylesheet" href="css/Texto.css"/>
+        <link rel="stylesheet" href="css/Style.css"/>
     </head>
 
     <!--visible-->
@@ -30,11 +30,11 @@
                     <div class="columna2-header">
                         <nav>
                             <ul>
-                                <li><a href="Index.html" class="active">Inicio</a></li>
+                                <li><a href="Index.html"class="active">Inicio</a></li>
+                                <li><a href="Nosotros.html">Nosotros</a></li>
                                 <!--
-                                    <li><a href="#">Nosotros</a></li>
-                                    <li><a href="#">Recursos</a></li>
-                                    <li><a href="#">Blog</a></li>
+                                <li><a href="Recursos.html">Recursos</a></li>
+                                <li><a href="Blog.html">Blog</a></li>
                                 -->
                                 <li><a href="Contacto.html">Contacto</a></li>
                             </ul>
@@ -209,7 +209,7 @@
                           
                             <label for="tema">Tema:</label>
                             <select>
-                                <option>Atículos</option>
+                                <option>Artículos</option>
                                 <option>Recursos</option>
                                 <option>Información general</option>
                                 <option>Todo</option>
@@ -263,6 +263,11 @@
                     <div class="columna-f3">
                         <ul>
                             <li><a href="Index.html">Inicio</a></li>
+                            <li><a href="Nosotros.html">Nosotros</a></li>
+                            <!--
+                            <li><a href="Recursos.html">Recursos</a></li>
+                            <li><a href="Blog.html">Blog</a></li>
+                            -->
                             <li><a href="Contacto.html">Contacto</a></li>
                         </ul>
                     </div>
