incorporación del icono

--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,9 @@
         <!--archivos CSS-->
         <link rel="stylesheet" href="css/Texto.css"/>
         <link rel="stylesheet" href="css/Style.css"/>
+
+        <!--Icono-->
+        <link rel="icon" href="img/Icono-CodeHive.ico"/>
     </head>
 
     <!--visible-->
