--- a/Recursos.html
+++ b/Recursos.html
@@ -17,6 +17,10 @@
         <link rel="stylesheet" href="css/Texto.css"/>
         <link rel="stylesheet" href="css/Style.css"/>
         <link rel="stylesheet" href="css/Style-nosotros"/>
+
+        <!--Icono-->
+        <link rel="icon" href="img/Icono-CodeHive.ico"/>
+        
     </head>
     
     <!--visible-->
