--- a/Contacto.html
+++ b/Contacto.html
@@ -18,9 +18,11 @@
         <link rel="stylesheet" href="css/Style.css"/>
         <link rel="stylesheet" href="css/Style-contacto.css"/>
 
+        <!--Icono-->
+        <link rel="icon" href="img/Icono-CodeHive.ico"/>
+
         <!--Boostrap-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-
     </head>
 
     <!--visible-->
