--- a/Nosotros.html
+++ b/Nosotros.html
@@ -17,6 +17,9 @@
         <link rel="stylesheet" href="css/Texto.css"/>
         <link rel="stylesheet" href="css/Style.css"/>
         <link rel="stylesheet" href="css/Style-nosotros"/>
+
+        <!--Icono-->
+        <link rel="icon" href="img/Icono-CodeHive.ico"/>
     </head>
     
     <!--visible-->
