cambios de nombre

--- a/Contacto.html
+++ b/Contacto.html
@@ -26,7 +26,6 @@
     <!--visible-->
     <body>
         <!--header-->
-        <!--header-->
         <header>
             <div class="container-header">
                 <div class="columna1-header">
@@ -35,13 +34,13 @@
                 <div class="columna2-header">
                     <nav>
                         <ul>
-                            <li><a href="Index.html">Inicio</a></li>
-                            <li><a href="Nosotros.html">Nosotros</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
                             <!--
-                            <li><a href="Recursos.html">Recursos</a></li>
-                            <li><a href="Blog.html">Blog</a></li>
+                            <li><a href="recursos.html">Recursos</a></li>
+                            <li><a href="blog.html">Blog</a></li>
                             -->
-                            <li><a href="Contacto.html" class="active">Contacto</a></li>
+                            <li><a href="contacto.html" class="active">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -98,9 +97,6 @@
             </div>
         </section>
 
-
-
-
         <!--Sección3-->
         <section class="seccion3-contacto">
             <div class="container-margen">
@@ -156,13 +152,13 @@
                 </div>
                 <div class="columna-f3">
                     <ul>
-                        <li><a href="Index.html">Inicio</a></li>
-                        <li><a href="Nosotros.html">Nosotros</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
                         <!--
-                            <li><a href="Recursos.html">Recursos</a></li>
-                            <li><a href="Blog.html">Blog</a></li>
-                            -->
-                        <li><a href="Contacto.html">Contacto</a></li>
+                        <li><a href="recursos.html">Recursos</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        -->
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="columna-f4">
