implementación inicial del blog

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <!--archivos CSS-->
         <link rel="stylesheet" href="css/Texto.css"/>
         <link rel="stylesheet" href="css/Style.css"/>
+        <link rel="stylesheet" href="css/Style-inicio.css"/>
 
         <!--Icono-->
         <link rel="icon" href="img/Icono-CodeHive.ico"/>
@@ -35,10 +36,8 @@
                             <ul>
                                 <li><a href="index.html"class="active">Inicio</a></li>
                                 <li><a href="nosotros.html">Nosotros</a></li>
-                                <!--
                                 <li><a href="recursos.html">Recursos</a></li>
                                 <li><a href="blog.html">Blog</a></li>
-                                -->
                                 <li><a href="contacto.html">Contacto</a></li>
                             </ul>
                         </nav>
@@ -163,29 +162,35 @@
                                 <div class="img-recursos1">
                                     <img src="img/Articulo1.jpg" class="img-recursos1" alt="img-recursos1">
                                 </div>
-                                <div class="texto-recursos1">
-                                    <h5>Artículo 1</h5>
+                                <div class="texto-articulo1">
+                                    <h6>IA y frontend: la
+                                        <br>combinación perfecta
+                                    </h6>
                                 </div>
                             </div>
                             <div class="grid2-seccion3">
                                 <div class="img-recursos2">
                                     <img src="img/Articulo2.jpg" class="img-recursos2" alt="img-recursos2">
                                 </div>
-                                <div class="texto-recursos2">
-                                    <h5>Artículo 2</h5>
+                                <div class="texto-articulo2">
+                                    <h6>¿Cómo mantenerte
+                                        <br>actualizado en frontend?
+                                    </h6>
                                 </div>
                             </div>
                             <div class="grid3-seccion3">
                                 <div class="img-recursos3">
                                     <img src="img/Articulo3.jpg" class="img-recursos3" alt="img-recursos3">
                                 </div>
-                                <div class="texto-recursos3">
-                                    <h5>Artículo 3</h5>
+                                <div class="texto-articulo3">
+                                    <h6>Evolución en el 
+                                        <br>diseño web actual
+                                    </h6>
                                 </div>  
                             </div>
                         </div>
                         <div class="button-articulos">
-                            <a href="#" class="button">Leer ></a>
+                            <a href="blog.html" class="button">Leer ></a>
                         </div>
                     </div>
                 </div>
@@ -267,10 +272,8 @@
                         <ul>
                             <li><a href="index.html">Inicio</a></li>
                             <li><a href="nosotros.html">Nosotros</a></li>
-                            <!--
                             <li><a href="recursos.html">Recursos</a></li>
                             <li><a href="blog.html">Blog</a></li>
-                            -->
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
