--- a/Articulo1.html
+++ b/Articulo1.html
@@ -12,10 +12,10 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
 
     <!-- Custom styles for this template -->
-    <link href="../Pruebas personales CodeHive/bootstrap/assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../CodeHive/bootstrap/assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/Style.css"/>
-    <link href="../Pruebas personales CodeHive/css/Texto.css" rel="stylesheet">
-    <link href="../Pruebas personales CodeHive/bootstrap/blog.css" rel="stylesheet">
+    <link href="../CodeHive/css/Texto.css" rel="stylesheet">
+    <link href="../CodeHive/bootstrap/blog.css" rel="stylesheet">
   </head>
   <body>
    
