--- a/articulo2.html
+++ b/articulo2.html
@@ -15,7 +15,7 @@
     <link href="../CodeHive/bootstrap/assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/Style.css"/>
     <link href="../CodeHive/css/Texto.css" rel="stylesheet">
-    <link href="../CodeHive/bootstrap/blog.css" rel="stylesheet">
+    <link href="../CodeHive/bootstrap/articulos.css" rel="stylesheet">
   </head>
   <body>
    
@@ -40,72 +40,83 @@
       </div>
   </header>
 
-  <!--Sección 1 Blog-->
-  <section class="seccion1-blog">
+  <!--Sección 1 articulo-->
+  <section class="seccion1-articulo">
     <div class="container-margen">
-      <div class="texto-seccion1-blog">
+      <div class="texto-seccion1-articulo">
         <h1>Nuestro blog</h1>
       </div>
     </div>
 </section>
 
-<!--Sección 2 Blog-->
-<section class="seccion2">
+<!--Sección 2 articulo-->
+<section class="seccion2-articulo">
   <div class="container-margen">
-      <div class="columna1-seccion2">
-          <div class="texto-seccion2">
-              <h4>
-                  <span class="blanco">Últimas noticias en</span> 
-                  <br>
-                  <span class="negro">desarrollo frontend</span>
-              </h4>
-              <p>En nuestro blog, te mantendremos actualizado sobre los temas más relevantes del mundo del desarrollo, desde las tendencias más populares hasta las últimas actualizaciones en código y programas de codificación. Además, exploraremos cómo la inteligencia artificial está cambiando el panorama del desarrollo en general, para que estés al día en todo momento.</p>
+      <div class="columna1-seccion2-blog">
+          <div class="texto-seccion2-blog">
+            <p>
+              <div class="pequeña-gris">
+                <span class="gris">Abril 2023</span></div>
+            </p>
+          <h4><span class="blanco">
+            ¿Cómo mantenerte actualizado en frontend?
+          </span></h4>
           </div>
       </div>
-      <div class="columna2-seccion2">
-          <div class="imagen-seccion2">
-              <img src="img/Img_Seccion2_blog.png" class="imagen-seccion2" alt="imagen-seccion2" >
+  </div>
+</section>
+
+<!--Sección 3 articulo-->
+<section class="seccion3-articulo">
+  <div class="container-margen">
+      <div class="columna1-seccion3">
+          <div class="texto-seccion3">
+              <p>
+                El desarrollo frontend se encuentra en constante evolución y es fundamental estar actualizado en las últimas tendencias y tecnologías para crear sitios web modernos y eficientes. En este artículo, exploraremos algunas de las tendencias más populares en el desarrollo frontend en la actualidad.
+              </p>
+              <p>
+                Una de las principales tendencias en el desarrollo frontend es la utilización de frameworks y librerías de JavaScript. Estas herramientas permiten a los desarrolladores crear aplicaciones web de manera más rápida y eficiente, lo que se traduce en una mayor productividad y calidad. Algunos de los frameworks y librerías más populares incluyen React, Vue.js y Angular.
+              </p>
+              <p>
+                Otra tendencia importante es el diseño web responsivo, que permite a los sitios web adaptarse a diferentes tamaños de pantalla y dispositivos. Esto es fundamental en la era de los dispositivos móviles y tabletas, ya que los usuarios esperan una experiencia de usuario óptima sin importar cómo accedan al sitio web.
+              </p>
+             
+              <div class="imagen-articulo">
+                <img src="img/Articulo2.jpg" class="imagen-articulo" alt="imagen-articulo" >
+            </div>
+            <p>
+              La optimización del rendimiento es otra tendencia en el desarrollo frontend que ha ganado importancia en los últimos años. Los desarrolladores están prestando más atención a la velocidad de carga de la página y a la eficiencia del código para crear sitios web más rápidos y eficientes. Las herramientas de análisis de rendimiento, como Lighthouse de Google, se están volviendo cada vez más populares para medir la velocidad de carga y la optimización del rendimiento.
+            </p>
+            <p>
+              Otra tendencia emergente en el desarrollo frontend es el uso de Progressive Web Apps (PWA). Estas aplicaciones web se comportan como aplicaciones móviles nativas, lo que significa que pueden instalarse en el dispositivo del usuario y funcionar sin conexión a internet. Las PWA también tienen una experiencia de usuario más fluida y rápida en comparación con los sitios web tradicionales.
+            </p>
+            <p>
+              En conclusión, estar actualizado en las últimas tendencias y tecnologías en el desarrollo frontend es fundamental para crear sitios web modernos y eficientes. Las tendencias mencionadas anteriormente, incluyendo el uso de frameworks y librerías de JavaScript, el diseño web responsivo, la optimización del rendimiento y el uso de Progressive Web Apps, son solo algunas de las claves para estar al día en el mundo del desarrollo frontend.
+            </p>
           </div>
+      </div>
+      <div class="columna2-seccion3">
+        <div class="texto-seccion3">
+          <div class="p-4 mb-3 bg-body-tertiary rounded">
+            <h5>Blog CodeHive</h5>
+            <p class="mb-0">Descubre las últimas tendencias en desarrollo frontend, diseño web y tecnologías emergentes con nuestra publicación especializada.</p>
+          </div>
+          <div class="p-4">
+            <h5>Archives</h5>
+            <ol class="list-unstyled mb-0">
+              <li><a href="articulo1.html">Marzo 2023</a></li>
+              <li><a href="articulo2.html" class="active">Abril 2023</a></li>
+              <li><a href="articulo3.html">Mayo 2023</a></li>
+              <li><a href="articulo4.html">Junio 2023</a></li>
+            </ol>
+          </div>
+      </div>
       </div>
   </div>
 </section>
 
 <!--Boostrap-->
 <main class="container">
-  <div class="row mb-2">
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">IA</strong>
-          <h4 class="mb-0">IA y frontend: la combinación perfecta</h4>
-          <div class="mb-1 text-body-secondary">Marzo</div>
-          <p class="card-text mb-auto">La inteligencia artificial es uno de los temas más candentes en el mundo de la tecnología ...</p>
-          <div class="continuar-leyendo">
-            <a href="Articulo1.html" class="stretched-link">Continuar leyendo...</a>
-          </div>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <img src="img/Articulo1.jpg" width="200" height="250" alt="Descripción de la imagen">
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Frontend</strong>
-          <h4 class="mb-0">¿Cómo mantenerte actualizado en frontend?</h4>
-          <div class="mb-1 text-body-secondary">Abril</div>
-          <p class="mb-auto">El desarrollo frontend se encuentra en constante evolución y es fundamental ...</p>
-          <div class="continuar-leyendo">
-            <a href="articulo2.html" class="stretched-link">Continuar leyendo...</a>
-          </div>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <img src="img/Articulo2.jpg" width="200" height="250" alt="Descripción de la imagen">
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="row mb-2">
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
