--- a/articulo4.html
+++ b/articulo4.html
@@ -56,10 +56,10 @@
           <div class="texto-seccion2-blog">
             <p>
               <div class="pequeña-gris">
-                <span class="gris">Marzo 2023</span></div>
+                <span class="gris">Junio 2023</span></div>
             </p>
           <h4><span class="blanco">
-            IA y frontend: la combinación perfecta
+            Actualizaciones en lenguajes de frontend
           </span></h4>
           </div>
       </div>
@@ -72,26 +72,26 @@
       <div class="columna1-seccion3">
           <div class="texto-seccion3">
               <p>
-                La inteligencia artificial es uno de los temas más candentes en el mundo de la tecnología en la actualidad. Desde aplicaciones en el hogar hasta vehículos autónomos, la inteligencia artificial está transformando nuestra forma de vida y de trabajo. En el campo del desarrollo frontend, la inteligencia artificial se está utilizando para mejorar la experiencia del usuario y aumentar la eficiencia del desarrollo.
+                El desarrollo frontend ha evolucionado significativamente en los últimos años, y gran parte de esta evolución se debe a las actualizaciones y mejoras en los lenguajes de programación que se utilizan en el proceso. En este artículo, exploraremos algunas de las últimas actualizaciones en lenguajes de programación para el desarrollo frontend y cómo están cambiando el panorama del desarrollo web.
               </p>
               <p>
-                Una de las aplicaciones más emocionantes de la inteligencia artificial en el desarrollo frontend es la creación de interfaces de usuario inteligentes. Los diseñadores pueden utilizar la inteligencia artificial para crear interfaces que sean más intuitivas y adaptables a las necesidades del usuario. Además, la inteligencia artificial se puede utilizar para automatizar tareas de diseño repetitivas y ahorrar tiempo y esfuerzo.
+                Comencemos con HTML, el lenguaje de marcado utilizado para crear páginas web. HTML5 es la última versión y se ha convertido en el estándar de facto para la creación de contenido web. Con HTML5, los desarrolladores pueden crear contenido más interactivo y dinámico, lo que ha mejorado en gran medida la experiencia del usuario. Además, HTML5 ha traído consigo nuevas etiquetas y atributos, lo que ha hecho que la creación de contenido web sea más fácil y más accesible.
               </p>
               <p>
-                Otra aplicación emocionante de la inteligencia artificial en el desarrollo frontend es la optimización de sitios web y aplicaciones móviles. Los desarrolladores pueden utilizar la inteligencia artificial para analizar el comportamiento del usuario y mejorar la navegación del sitio, lo que puede mejorar la satisfacción del usuario y aumentar la tasa de conversión. Además, la inteligencia artificial se puede utilizar para optimizar el rendimiento del sitio web, reducir los tiempos de carga y mejorar la experiencia del usuario.
+                Otro lenguaje importante en el desarrollo frontend es CSS, que se utiliza para dar estilo a las páginas web. La última versión de CSS es CSS3, que ha introducido una serie de nuevas características y propiedades. Algunas de las nuevas características incluyen la capacidad de crear diseños más complejos, la animación de elementos y la creación de efectos visuales avanzados. Con CSS3, los desarrolladores pueden crear diseños y estilos más sofisticados y mejorados.
               </p>
              
               <div class="imagen-articulo">
-                <img src="img/Articulo1.jpg" class="imagen-articulo" alt="imagen-articulo" >
+                <img src="img/Articulo4.jpg" class="imagen-articulo" alt="imagen-articulo" >
             </div>
             <p>
-              En cuanto a las tendencias en el desarrollo frontend, una de las más importantes en los últimos tiempos es el uso de componentes web. Los componentes web son piezas de código reutilizables que se pueden utilizar en múltiples proyectos, lo que ahorra tiempo y esfuerzo en el desarrollo. Los componentes web también mejoran la consistencia visual y la accesibilidad del sitio web, ya que se pueden utilizar en toda la página.
+              Por último, pero no menos importante, tenemos JavaScript, el lenguaje de programación más utilizado en el desarrollo frontend. La última versión de JavaScript es ECMAScript 6, también conocida como ES6 o ECMAScript 2015. Esta versión ha introducido nuevas características y mejoras significativas en el lenguaje, lo que ha hecho que la programación en JavaScript sea más fácil y más accesible. Las nuevas características incluyen la introducción de clases, la posibilidad de utilizar variables let y const, la desestructuración de objetos y la introducción de funciones de flecha.
             </p>
             <p>
-              Otra tendencia importante en el desarrollo frontend es el uso de herramientas de colaboración en equipo. Los equipos de desarrollo frontend suelen trabajar en proyectos complejos que requieren la colaboración de múltiples miembros del equipo. Las herramientas de colaboración en equipo, como Slack, Trello o Asana, permiten a los miembros del equipo comunicarse y colaborar de manera más eficiente.
+              Además de las actualizaciones en estos lenguajes de programación clave, también hay una serie de tecnologías emergentes que están cambiando el panorama del desarrollo frontend. Algunas de estas tecnologías incluyen WebAssembly, que permite que se ejecuten programas escritos en lenguajes como C++ y Rust en la web, y Web Components, que permite la creación de componentes web personalizados que pueden ser utilizados en cualquier sitio web.
             </p>
             <p>
-              En resumen, la inteligencia artificial, los componentes web y las herramientas de colaboración en equipo son algunas de las tendencias más importantes en el desarrollo frontend en la actualidad. Estas herramientas y técnicas están transformando la forma en que los desarrolladores frontend trabajan y están ayudando a mejorar la experiencia del usuario en la web y en las aplicaciones móviles.
+              En conclusión, el desarrollo frontend está en constante evolución y las actualizaciones en los lenguajes de programación son una parte fundamental de esa evolución. HTML5, CSS3 y ECMAScript 6 son las últimas versiones de los lenguajes más utilizados en el desarrollo frontend, y han traído consigo una serie de nuevas características y mejoras que han mejorado la experiencia del usuario y han hecho que la programación en el frontend sea más fácil y accesible. Además, hay una serie de tecnologías emergentes que están cambiando el panorama del desarrollo frontend, y es importante estar al tanto de ellas para mantenerse actualizado en este campo en constante cambio.
             </p>
           </div>
       </div>
@@ -104,10 +104,10 @@
           <div class="p-4">
             <h5>Archives</h5>
             <ol class="list-unstyled mb-0">
-              <li><a href="articulo1.html" class="active">Marzo 2023</a></li>
+              <li><a href="articulo1.html">Marzo 2023</a></li>
               <li><a href="articulo2.html">Abril 2023</a></li>
               <li><a href="articulo3.html">Mayo 2023</a></li>
-              <li><a href="articulo4.html">Junio 2023</a></li>
+              <li><a href="articulo4.html" class="active">Junio 2023</a></li>
             </ol>
           </div>
       </div>
@@ -121,16 +121,16 @@
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Tendencias</strong>
-          <h4 class="mb-0">Evolución en el diseño web actual</h4>
-          <div class="mb-1 text-body-secondary">Mayo</div>
-          <p class="card-text mb-auto">El diseño web ha evolucionado significativamente en las últimas décadas ...</p>
+          <strong class="d-inline-block mb-2 text-success">IA</strong>
+          <h4 class="mb-0">IA y frontend: la combinación perfecta</h4>
+          <div class="mb-1 text-body-secondary">Marzo</div>
+          <p class="card-text mb-auto">La inteligencia artificial es uno de los temas más candentes en el mundo de la tecnología ...</p>
           <div class="continuar-leyendo">
-            <a href="articulo3.html" class="stretched-link">Continuar leyendo...</a>
+            <a href="Articulo1.html" class="stretched-link">Continuar leyendo...</a>
           </div>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img src="img/Articulo3.jpg" width="200" height="250" alt="Descripción de la imagen">
+          <img src="img/Articulo1.jpg" width="200" height="250" alt="Descripción de la imagen">
         </div>
       </div>
     </div>
@@ -138,15 +138,15 @@
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <strong class="d-inline-block mb-2 text-success">Frontend</strong>
-          <h4 class="mb-0">Actualizaciones en lenguajes de frontend</h4>
-          <div class="mb-1 text-body-secondary">Junio</div>
-          <p class="mb-auto">El desarrollo frontend ha evolucionado significativamente en los últimos años, y gran...</p>
+          <h4 class="mb-0">¿Cómo mantenerte actualizado en frontend?</h4>
+          <div class="mb-1 text-body-secondary">Abril</div>
+          <p class="mb-auto">El desarrollo frontend se encuentra en constante evolución y es fundamental ...</p>
           <div class="continuar-leyendo">
-            <a href="Articulo4.html" class="stretched-link">Continuar leyendo...</a>
+            <a href="articulo2.html" class="stretched-link">Continuar leyendo...</a>
           </div>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img src="img/Articulo4.jpg" width="200" height="250" alt="Descripción de la imagen">
+          <img src="img/Articulo2.jpg" width="200" height="250" alt="Descripción de la imagen">
         </div>
       </div>
     </div>
