--- a/articulo3.html
+++ b/articulo3.html
@@ -15,7 +15,7 @@
     <link href="../CodeHive/bootstrap/assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/Style.css"/>
     <link href="../CodeHive/css/Texto.css" rel="stylesheet">
-    <link href="../CodeHive/bootstrap/blog.css" rel="stylesheet">
+    <link href="../CodeHive/bootstrap/articulos.css" rel="stylesheet">
   </head>
   <body>
    
@@ -40,32 +40,77 @@
       </div>
   </header>
 
-  <!--Sección 1 Blog-->
-  <section class="seccion1-blog">
+  <!--Sección 1 articulo-->
+  <section class="seccion1-articulo">
     <div class="container-margen">
-      <div class="texto-seccion1-blog">
+      <div class="texto-seccion1-articulo">
         <h1>Nuestro blog</h1>
       </div>
     </div>
 </section>
 
-<!--Sección 2 Blog-->
-<section class="seccion2">
+<!--Sección 2 articulo-->
+<section class="seccion2-articulo">
   <div class="container-margen">
-      <div class="columna1-seccion2">
-          <div class="texto-seccion2">
-              <h4>
-                  <span class="blanco">Últimas noticias en</span> 
-                  <br>
-                  <span class="negro">desarrollo frontend</span>
-              </h4>
-              <p>En nuestro blog, te mantendremos actualizado sobre los temas más relevantes del mundo del desarrollo, desde las tendencias más populares hasta las últimas actualizaciones en código y programas de codificación. Además, exploraremos cómo la inteligencia artificial está cambiando el panorama del desarrollo en general, para que estés al día en todo momento.</p>
+      <div class="columna1-seccion2-blog">
+          <div class="texto-seccion2-blog">
+            <p>
+              <div class="pequeña-gris">
+                <span class="gris">Mayo 2023</span></div>
+            </p>
+          <h4><span class="blanco">
+            Evolución en el diseño web actual
+          </span></h4>
           </div>
       </div>
-      <div class="columna2-seccion2">
-          <div class="imagen-seccion2">
-              <img src="img/Img_Seccion2_blog.png" class="imagen-seccion2" alt="imagen-seccion2" >
+  </div>
+</section>
+
+<!--Sección 3 articulo-->
+<section class="seccion3-articulo">
+  <div class="container-margen">
+      <div class="columna1-seccion3">
+          <div class="texto-seccion3">
+              <p>
+                El diseño web ha evolucionado significativamente en las últimas décadas, y en la actualidad hay una gran cantidad de tendencias y enfoques modernos en constante desarrollo. Una de las tendencias más notables es el uso de diseños minimalistas, que se enfocan en la simplicidad y la claridad de la información. Este enfoque se ha convertido en una especie de norma en la industria, ya que permite una navegación más intuitiva y mejora la usabilidad de los sitios web.
+              </p>
+              <p>
+                Otra tendencia que ha cobrado fuerza en los últimos años es el uso de animaciones interactivas. Estas animaciones no solo agregan un toque de dinamismo al diseño, sino que también pueden ayudar a mejorar la experiencia de usuario al hacer que la navegación sea más fácil y divertida. Ejemplos de esto son los menús desplegables animados o los efectos de scroll que van revelando diferentes secciones del sitio.
+              </p>
+              <p>
+                Además, el uso de efectos 3D también se ha convertido en una tendencia popular en el diseño web. La implementación de efectos tridimensionales permite a los diseñadores crear diseños más realistas e inmersivos, lo que puede mejorar significativamente la experiencia de usuario. Algunos ejemplos de efectos 3D utilizados en diseño web son las imágenes que se mueven según la posición del cursor o las animaciones que crean la ilusión de profundidad.
+              </p>
+             
+              <div class="imagen-articulo">
+                <img src="img/Articulo3.jpg" class="imagen-articulo" alt="imagen-articulo" >
+            </div>
+            <p>
+              Otro aspecto importante del diseño web actual es el uso de tipografías personalizadas. Las fuentes personalizadas pueden agregar un toque único y distintivo al diseño, y pueden ayudar a mejorar la legibilidad del contenido. Además, las tipografías personalizadas son una forma de reforzar la identidad de marca y crear una experiencia de usuario más coherente y atractiva.
+            </p>
+            <p>
+              En cuanto a la influencia de estas tendencias en la experiencia de usuario, es importante destacar que todas ellas buscan mejorar la interacción del usuario con el contenido web. Ya sea a través de una navegación más intuitiva, una experiencia más inmersiva o una lectura más agradable, el objetivo final es crear una experiencia de usuario satisfactoria y atractiva.
+            </p>
+            <p>
+              En conclusión, el diseño web está en constante evolución y las tendencias actuales buscan mejorar la experiencia de usuario a través de diseños minimalistas, animaciones interactivas, efectos 3D y tipografías personalizadas. Al aplicar estas tendencias de manera estratégica y coherente, los diseñadores pueden crear sitios web modernos, eficientes y atractivos para los usuarios.
+            </p>
           </div>
+      </div>
+      <div class="columna2-seccion3">
+        <div class="texto-seccion3">
+          <div class="p-4 mb-3 bg-body-tertiary rounded">
+            <h5>Blog CodeHive</h5>
+            <p class="mb-0">Descubre las últimas tendencias en desarrollo frontend, diseño web y tecnologías emergentes con nuestra publicación especializada.</p>
+          </div>
+          <div class="p-4">
+            <h5>Archives</h5>
+            <ol class="list-unstyled mb-0">
+              <li><a href="articulo1.html">Marzo 2023</a></li>
+              <li><a href="articulo2.html">Abril 2023</a></li>
+              <li><a href="articulo3.html"class="active">Mayo 2023</a></li>
+              <li><a href="articulo4.html">Junio 2023</a></li>
+            </ol>
+          </div>
+      </div>
       </div>
   </div>
 </section>
@@ -102,40 +147,6 @@
         </div>
         <div class="col-auto d-none d-lg-block">
           <img src="img/Articulo2.jpg" width="200" height="250" alt="Descripción de la imagen">
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row mb-2">
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Tendencias</strong>
-          <h4 class="mb-0">Evolución en el diseño web actual</h4>
-          <div class="mb-1 text-body-secondary">Mayo</div>
-          <p class="card-text mb-auto">El diseño web ha evolucionado significativamente en las últimas décadas ...</p>
-          <div class="continuar-leyendo">
-            <a href="articulo3.html" class="stretched-link">Continuar leyendo...</a>
-          </div>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <img src="img/Articulo3.jpg" width="200" height="250" alt="Descripción de la imagen">
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Frontend</strong>
-          <h4 class="mb-0">Actualizaciones en lenguajes de frontend</h4>
-          <div class="mb-1 text-body-secondary">Junio</div>
-          <p class="mb-auto">El desarrollo frontend ha evolucionado significativamente en los últimos años, y gran...</p>
-          <div class="continuar-leyendo">
-            <a href="Articulo4.html" class="stretched-link">Continuar leyendo...</a>
-          </div>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <img src="img/Articulo4.jpg" width="200" height="250" alt="Descripción de la imagen">
         </div>
       </div>
     </div>
