--- a/nosotros.html
+++ b/nosotros.html
@@ -37,10 +37,10 @@
                     <nav>
                         <ul>
                             <li><a href="index.html">Inicio</a></li>
-                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="nosotros.html" class="active">Nosotros</a></li>
                             <li><a href="recursos.html">Recursos</a></li>
                             <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contacto.html" class="active">Contacto</a></li>
+                            <li><a href="contacto.html" >Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
